infra/k8s/base/auth/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      serviceAccountName: auth
      containers:
        - name: auth
          image: kamilwronka7/lootlog-auth:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1.5Gi"
              cpu: "2000m"

          ports:
            - name: container-port
              containerPort: 4000

          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 2
            periodSeconds: 3
