infra/k8s/base/auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
    service: auth
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: auth
