infra/k8s/base/auth/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth

spec:
  tls:
    - hosts:
        - dev-auth.lootlog.pl
      secretName: cloudflare-origin-cert
  rules:
    - host: dev-auth.lootlog.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 4000
